fixtures/rust/fallback/should_fail/map_or.rs
pub fn read_region(region: Option<String>) -> usize {
    region.map_or(0, |value| value.len())
}
